Cold queue and cache changes to fix errors with large transform splits